{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 136,
  "lineage": "a8166b8c-d0c2-ec4c-8d1e-9103e1f1a9c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Redhat-App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b04ce5d876a9ba29",
            "arn": "arn:aws:ec2:eu-west-1:094132202025:instance/i-058ad73303fbb1fb6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058ad73303fbb1fb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kitskat2023",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aba17f623a584712",
            "private_dns": "ip-10-0-2-70.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.70",
            "public_ip": "18.202.20.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0802357ac64968d18",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4c6345d31473f2e",
            "tags": {
              "Name": "Redhat"
            },
            "tags_all": {
              "Name": "Redhat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0906694f9d33d8c8a"
            ]
          },
          "dependencies": [
            "aws_subnet.redhat_main",
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00aa9d3df94c6c354",
            "arn": "arn:aws:ec2:eu-west-1:094132202025:instance/i-05c53a2f70d16e966",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c53a2f70d16e966",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kitskat2023",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047b185b67c8eb443",
            "private_dns": "ip-10-0-1-85.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.85",
            "public_ip": "3.252.62.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03db428345d2e844c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0271c4dd94a5e562c",
            "tags": {
              "Name": "Ubuntu"
            },
            "tags_all": {
              "Name": "Ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0906694f9d33d8c8a"
            ]
          },
          "dependencies": [
            "aws_subnet.ubuntu_main",
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:internet-gateway/igw-0a026619aaa955c1d",
            "id": "igw-0a026619aaa955c1d",
            "owner_id": "094132202025",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0796e0fa63557cdbf"
          },
          "dependencies": [
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testcase_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:route-table/rtb-007501b525f0d93bd",
            "id": "rtb-007501b525f0d93bd",
            "owner_id": "094132202025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a026619aaa955c1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet-Gateway-Example"
            },
            "tags_all": {
              "Name": "Internet-Gateway-Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0796e0fa63557cdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_example",
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c4bbe09057d354b",
            "route_table_id": "rtb-007501b525f0d93bd",
            "subnet_id": "subnet-0271c4dd94a5e562c"
          },
          "dependencies": [
            "aws_internet_gateway.igw_example",
            "aws_route_table.testcase_example",
            "aws_subnet.ubuntu_main",
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d7b6b01b2683ead",
            "route_table_id": "rtb-007501b525f0d93bd",
            "subnet_id": "subnet-0f4c6345d31473f2e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_example",
            "aws_route_table.testcase_example",
            "aws_subnet.redhat_main",
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testcase_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:security-group/sg-02a925ffdc38c3e92",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a925ffdc38c3e92",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPD from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "testcase_sg",
            "name_prefix": "",
            "owner_id": "094132202025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testcase_sg"
            },
            "tags_all": {
              "Name": "testcase_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0796e0fa63557cdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redhat_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:subnet/subnet-0f4c6345d31473f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4c6345d31473f2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094132202025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Redhat-Main"
            },
            "tags_all": {
              "Name": "Redhat-Main"
            },
            "vpc_id": "vpc-0796e0fa63557cdbf"
          },
          "dependencies": [
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ubuntu_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:subnet/subnet-0271c4dd94a5e562c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0271c4dd94a5e562c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094132202025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ubuntu-Main"
            },
            "tags_all": {
              "Name": "Ubuntu-Main"
            },
            "vpc_id": "vpc-0796e0fa63557cdbf"
          },
          "dependencies": [
            "aws_vpc.testcase_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testcase_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:094132202025:vpc/vpc-0796e0fa63557cdbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ce35205b04892e4",
            "default_route_table_id": "rtb-0dfb8ae653196b06a",
            "default_security_group_id": "sg-0906694f9d33d8c8a",
            "dhcp_options_id": "dopt-04841ed25b2ceeb74",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0796e0fa63557cdbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfb8ae653196b06a",
            "owner_id": "094132202025",
            "tags": {
              "Name": "Testcase"
            },
            "tags_all": {
              "Name": "Testcase"
            }
          }
        }
      ]
    }
  ]
}